--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="col-md-4">
                 <h1 class="titulo text-center">Quiz</h1>
                 <div id="jogo">
-                    <form id="formComeca" onsubmit = "comecarJogoController.comeca()" >
+                    <form id="formComeca" onsubmit = "jogoController.comeca()" >
                         <div class="text-center"><button  class="btn btn-primary btn-lg" id="btn-comecar" type="submit">Começar</button></div>
                     </form>
-                    <form id=formJogo class="esconde" onsubmit="comecarJogoController.proximaPergunta()">
+                    <form id=formJogo class="esconde" onsubmit="jogoController.proximaPergunta()">
                         <h3 id="nPergunta"></h3>
                         <p id = "pergunta"></p>
 
@@ -39,12 +39,12 @@
             </div>
         </div>    
     </div>
-    <script src="JS/controller/ComecarJogoController.js"></script>
+    <script src="JS/controller/JogoController.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>
-        let comecarJogoController = new ComecarJogoController();
+        let jogoController = new JogoController();
     </script>
 </body>
 </html>
